--- a/index.html
+++ b/index.html
@@ -67,9 +67,10 @@
 
 
       <!-- TITLE -->
+
       <div class="row">
         <div class="col-lg-6">
-          <h1 class="myh1">Meet new and interesting dogs nearby.</h1>
+          <h1 class="h1-title">Meet new and interesting dogs nearby.</h1>
           <button type="button" class="btn btn-lg btn-dark download-button"> <i class="bi bi-apple"></i> Download</button>
           <button type="button" class="btn btn-lg btn-outline-light download-button"> <i class="bi bi-google-play"></i> Download</button>
         </div>
@@ -86,27 +87,37 @@
   <!-- FEATURES -->
 
   <section id="features">
+
     <div class="container">
       <div class="row">
         <div class="feature-box col-lg-4">
           <i class="icons fa-solid fa-circle-check fa-4x"></i>
-          <h3 class="myh3">Easy to use.</h3>
-          <p>So easy to use, even your dog could do it.</p>
+          <h3 class="h3-feature">Easy to use.</h3>
+          <p class="p-features">So easy to use, even your dog could do it.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icons fa-solid fa-bullseye fa-4x"></i>
-          <h3 class="myh3">Elite Clientele</h3>
-          <p>We have all the dogs, the greatest dogs.</p>
+          <h3 class="h3-feature">Elite Clientele</h3>
+          <p class="p-features">We have all the dogs, the greatest dogs.</p>
         </div>
 
         <div class="feature-box col-lg-4">
           <i class="icons fa-solid fa-heart fa-4x"></i>
-          <h3 class="myh3">Guaranteed to work.</h3>
-          <p>Find the love of your dog's life or your money back.</p>
+          <h3 class="h3-feature">Guaranteed to work.</h3>
+          <p class="p-features">Find the love of your dog's life or your money back.</p>
         </div>
       </div>
     </div>
+
+  <!-- FIXED ARROW INDEX -->
+<!--
+    <div class="container fixed-bottom bounce container-bounce" id="container-bounce">
+       <a href="#title" class=""><i class="fa-solid fa-up-long arrow-index"> </i></a>
+    </div>
+-->
+
+
   </section>
 
 
@@ -118,12 +129,12 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2 class="myh2" id="myh2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <h2 class="h2-testemonials" id="myh2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
             <img class="testemonials-image" id="testemonials-image" src="images/dog-img.jpg" alt="dog-profile">
-            <em  id="carousel-name">Pebbles, New York</em>
+            <em id="carousel-name">Pebbles, New York</em>
           </div>
           <div class="carousel-item">
-            <h2 class="myh2" id="myh2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <h2 class="h2-testemonials" id="myh2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
             <img class="testemonials-image" id="testemonials-image" src="images/lady-img.jpg" alt="lady-profile">
             <em id="carousel-name">Beverly, Illinois</em>
           </div>
@@ -148,17 +159,18 @@
     <div class="container press">
       <div class="row">
         <div class="col-lg-12">
-      <img class="img-press" id="img-press" src="images/techcrunch.png" alt="tc-logo">
-      <img class="img-press" id="img-press" src="images/tnw.png" alt="tnw-logo">
-      <img class="img-press" id="img-press" src="images/bizinsider.png" alt="biz-insider-logo">
-      <img class="img-press" id="img-press" src="images/mashable.png" alt="mashable-logo">
-</div>
-</div>
+          <img class="img-press" id="img-press" src="images/techcrunch.png" alt="tc-logo">
+          <img class="img-press" id="img-press" src="images/tnw.png" alt="tnw-logo">
+          <img class="img-press" id="img-press" src="images/bizinsider.png" alt="biz-insider-logo">
+          <img class="img-press" id="img-press" src="images/mashable.png" alt="mashable-logo">
+        </div>
+      </div>
     </div>
   </section>
 
 
   <!-- PRINCING -->
+
   <div class="container" id="container-pricing">
 
     <section id="pricing">
@@ -223,7 +235,7 @@
 
   <section id="cta">
     <div class="container">
-      <h3 class="myh3-2">Find the True Love of Your Dog's <br>Life Today.</h3>
+      <h3 class="h3-cta">Find the True Love of Your Dog's <br>Life Today.</h3>
       <button type="button" class="btn btn-lg btn-dark download-button"> <i class="bi bi-apple"></i> Download</button>
       <button type="button" class="btn btn-lg btn-outline-light download-button"> <i class="bi bi-google-play"></i> Download</button>
     </div>
