--- a/index.html
+++ b/index.html
@@ -129,13 +129,13 @@
       <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <h2 class="h2-testemonials" id="myh2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-            <img class="testemonials-image" id="testemonials-image" src="images/dog-img.jpg" alt="dog-profile">
+            <h2 class="h2-testimonials" id="myh2">I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
+            <img class="testimonials-image" id="testemonials-image" src="images/dog-img.jpg" alt="dog-profile">
             <em id="carousel-name">Pebbles, New York</em>
           </div>
           <div class="carousel-item">
-            <h2 class="h2-testemonials" id="myh2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
-            <img class="testemonials-image" id="testemonials-image" src="images/lady-img.jpg" alt="lady-profile">
+            <h2 class="h2-testimonials" id="myh2">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
+            <img class="testimonials-image" id="testemonials-image" src="images/lady-img.jpg" alt="lady-profile">
             <em id="carousel-name">Beverly, Illinois</em>
           </div>
         </div>
@@ -175,7 +175,7 @@
 
     <section id="pricing">
 
-      <h2>A Plan for Every Dog's Needs</h2>
+      <h3 class="h3-feature">A Plan for Every Dog's Needs</h3>
       <p>Simple and affordable price plans for your and your dog.</p>
 
       <div class="row">
@@ -185,7 +185,7 @@
               <h3>Chihuahua</h3>
             </div>
             <div class="card-body">
-              <h2>Free</h2>
+              <h1 class="card-title pricing-card-title">Free</h1>
               <p>5 Matches Per Day</p>
               <p>10 Messages Per Day</p>
               <p>Unlimited App Usage</p>
@@ -201,7 +201,7 @@
               <h3>Labrador</h3>
             </div>
             <div class="card-body">
-              <h2>$49 / mo</h2>
+              <h1 class="card-title pricing-card-title">£49 <small class="text-muted">/ mo</small></h1>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
               <p>Unlimited App Usage</p>
@@ -217,7 +217,7 @@
               <h3>Mastiff</h3>
             </div>
             <div class="card-body">
-              <h2>$99 / mo</h2>
+              <h1 class="card-title pricing-card-title">£99 <small class="text-muted">/ mo</small></h1>
               <p>Pirority Listing</p>
               <p>Unlimited Matches</p>
               <p>Unlimited Messages</p>
